--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,6 +15,19 @@
 .p-color {
     color: var(--primary);
 }
+.s{
+    &1-color {
+        color:var(--secondary1)
+    }
+    &2-color {
+        color:var(--secondary2)
+    }
+    &3-color {
+        color:var(--secondary3)
+    }
+}
+
+// DISPLAY FLEX
 .d-flex {
     display: flex;
     flex-wrap: wrap;
@@ -28,9 +41,20 @@
 .justify-between {
     justify-content: space-between;
 }
+.justify-evenly {
+    justify-content: space-evenly;
+}
 .align-center {
     align-content: center;
 }
+.col-2 {
+    flex-basis: 50%;
+}
+.col-3 {
+    flex-basis: 33.33%;
+}
+
+// MARGIN
 .m- {
     &1{
         margin: 1%;
@@ -87,10 +111,76 @@
     }
 }
 
+// PADDING
+.p- {
+    &1{
+        padding: 1%;
+    }
+    &3{
+        padding: 3%;
+    }
+    &5 {
+        padding: 5%;
+    }
+}
+.pt- {
+    &1{
+        padding-top: 1%;
+    }
+    &3{
+        padding-top: 3%;
+    }
+    &5 {
+        padding-top: 5%;
+    }
+}
+.pb- {
+    &1{
+        padding-bottop: 1%;
+    }
+    &3{
+        padding-bottop: 3%;
+    }
+    &5 {
+        padding-bottop: 5%;
+    }
+}
+.ps- {
+    &1{
+        padding-left: 1%;
+    }
+    &3{
+        padding-left: 3%;
+    }
+    &5 {
+        padding-left: 5%;
+    }
+}
+.pe- {
+    &1{
+        padding-right: 1%;
+    }
+    &3{
+        padding-right: 3%;
+    }
+    &5 {
+        padding-right: 5%;
+    }
+}
+
+// TEXT ATTRIBUTES
+.text-center {
+    text-align: center;
+}
 .bold {
     font-weight: bold;
 }
 .bolder {
     font-weight: bolder;
+}
+
+// SHAPES
+.circle {
+    border-radius: 50%;
 }
 
